feat: Complete Website (non polished)

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -49,15 +49,15 @@
     <link
       rel="preload"
       as="font"
-      type="font/woff2"
-      href="/assets/fonts/montserrat-v29-latin-regular.woff2"
+      type="font/ttf"
+      href="/assets/fonts/Nexa-ExtraLight.ttf"
       crossorigin
     />
     <link
       rel="preload"
       as="font"
-      type="font/woff2"
-      href="/assets/fonts/montserrat-v29-latin-700.woff2"
+      type="font/ttf"
+      href="/assets/fonts/Nexa-Heavy.ttf"
       crossorigin
     />
 
