--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -2,17 +2,17 @@
 <!--                   Footer                     -->
 <!-- ============================================ -->
 
-<footer id="footer-108">
+<footer id="footer">
   <div class="container">
     <ul class="ul">
       <li class="li">
-        <a href="" class="link">Home</a>
+        <a href="/" class="link">Home</a>
       </li>
       <li class="li">
-        <a href="" class="link">Projects</a>
+        <a href="/project" class="link">Projects</a>
       </li>
       <li class="li">
-        <a href="" class="link">Blogs</a>
+        <a href="/blog" class="link">Blogs</a>
       </li>
     </ul>
     <span class="copyright">© 2024 Copyright</span>
