--- a/src/assets/sass/blog.scss
+++ b/src/assets/sass/blog.scss
@@ -179,7 +179,6 @@
             top: 0;
             left: 0;
             content: "";
-            opacity: 0.7;
             display: block;
             background: #000;
             height: 100%;
@@ -205,9 +204,8 @@
         background-attachment: fixed;
         min-height: calc(300 / 16 * 1rem);
         height: auto;
-        padding-top: calc(180 / 16 * 1rem);
+        padding: calc(64 / 16 * 1rem) 0;
         font-size: inherit;
-        padding-block-end: calc(100 / 16 * 1rem);
     }
 }
 
@@ -715,213 +713,6 @@
                 height: auto;
                 width: 100%;
             }
-        }
-    }
-}
-
-/*-- -------------------------- -->
-<---           Footer           -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    #footer {
-        background-color: #1a1a1a;
-        /* 60px - 100px top and bottom */
-        padding: clamp(3.75em, 7.82vw, 6.25em) calc(16 / 16 * 1em);
-        font-family: "Nexa", "Arial", sans-serif;
-
-        .container {
-            margin: auto;
-            max-width: calc(1280 / 16 * 1em);
-            width: 100%;
-        }
-
-        .logo-group {
-            position: relative;
-            /* takes up all the space, lets the other ul's wrap below it */
-            width: 100%;
-        }
-
-        .logo {
-            display: block;
-            /* 28px - 44px */
-            margin-bottom: clamp(1.75em, 4.17vw, 2.75em);
-            height: auto;
-            /* 210px - 240px */
-            width: clamp(13.125em, 8vw, 15em);
-        }
-
-        .logo-img {
-            height: auto;
-            width: 100%;
-        }
-
-        .text {
-            margin: 0;
-            margin-bottom: calc(40 / 16 * 1rem);
-            /* changes to 521px at desktop */
-            max-width: calc(344 / 16 * 1rem);
-            color: var(--bodyTextColorWhite);
-        }
-
-        .nav {
-            margin: 0;
-            /* 32px - 40px */
-            margin-bottom: clamp(2em, 5.3vw, 2.5em);
-            padding: 0;
-            padding-left: calc(16 / 16 * 1em);
-        }
-
-        .nav-li {
-            list-style: none;
-            line-height: 1.5em;
-            &:last-of-type {
-                margin-bottom: 0;
-            }
-        }
-
-        .header {
-            position: relative;
-            display: block;
-            margin-bottom: calc(20 / 16 * 1rem);
-            font-size: calc(16 / 16 * 1rem);
-            line-height: 1.5em;
-            font-weight: 700;
-            color: var(--bodyTextColorWhite);
-        }
-
-        .nav-link {
-            position: relative;
-            text-decoration: none;
-            font-size: calc(16 / 16 * 1rem);
-            line-height: 1.5em;
-            color: var(--bodyTextColorWhite);
-
-            &:before {
-                position: absolute;
-                bottom: calc(-2 / 16 * 1rem);
-                left: 0;
-                /* underline */
-                content: "";
-                opacity: 1;
-                display: block;
-                /* current color of the parent */
-                background: currentColor;
-                height: calc(2 / 16 * 1rem);
-                width: 0%;
-                transition: width 0.3s;
-            }
-
-            &:hover {
-                &:before {
-                    width: 100%;
-                }
-            }
-        }
-
-        .bottom {
-            position: relative;
-            width: 100%;
-            padding-left: calc(16 / 16 * 1em);
-        }
-
-        .copyright {
-            display: block;
-            font-size: calc(16 / 16 * 1rem);
-            line-height: 1.5em;
-            color: #b4b2c7;
-        }
-
-        .social {
-            position: absolute;
-            bottom: 0;
-            right: calc(16 / 16 * 1em);
-            display: inline-flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            gap: calc(12 / 16 * 1em);
-        }
-
-        .social-link {
-            z-index: 1;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            background-color: #4e4b66;
-            height: calc(24 / 16 * 1rem);
-            width: calc(24 / 16 * 1rem);
-            transition: transform 0.3s, background-color 0.3s;
-
-            &:hover {
-                transform: translateY(calc(-3 / 16 * 1rem));
-                background-color: var(--primary);
-            }
-        }
-
-        .social-img {
-            display: block;
-            height: calc(13 / 16 * 1rem);
-            width: auto;
-        }
-    }
-}
-
-/* Inbetween - 600px */
-@media only screen and (min-width: 37.5em) {
-    #footer {
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: flex-start;
-            /* 48px - 60px */
-            column-gap: clamp(3em, 5.9vw, 3.75em);
-        }
-    }
-}
-
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #footer {
-        .logo-group {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            /* 20px - 60px */
-            margin-bottom: clamp(1.25em, 4vw, 3.75em);
-        }
-
-        .logo {
-            margin: 0;
-        }
-
-        .text {
-            margin: 0;
-            max-width: calc(521 / 16 * 1rem);
-            width: 50%;
-            text-align: right;
-        }
-
-        .nav {
-            padding: 0;
-        }
-
-        .bottom {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0;
-        }
-
-        .social {
-            position: relative;
-            /* reset these positions */
-            bottom: auto;
-            right: auto;
-            flex-direction: row;
         }
     }
 }
