--- a/src/assets/sass/footer.scss
+++ b/src/assets/sass/footer.scss
@@ -4,23 +4,24 @@
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #footer-108 {
+    #footer {
         /* 40px - 100px top and bottom */
-        padding: clamp(2.5rem, 7.9vw, 6.25rem) calc(16 / 16 * 1rem);
+        // padding: clamp(2.5rem, 7.9vw, 6.25rem) 0;
         /* 40px - 50px */
-        padding-bottom: clamp(2.5rem, 7.9vw, 3.125rem);
+        padding-bottom: clamp(1rem, 3vw, 2rem);
 
         .container {
             width: 100%;
-            max-width: calc(1280 / 16 * 1rem);
+            // max-width: calc(1280 / 16 * 1rem);
             margin: auto;
         }
 
         .ul {
             /* 40px - 60px*/
-            padding: 0 0 clamp(2.5rem, 4.7vw, 3.75rem);
+            padding: clamp(2.5rem, 4.7vw, 3.75rem) 0;
             margin: auto;
-            border-bottom: 1px solid #eff0f6;
+            border-top: 2px solid #000;
+            border-bottom: 2px solid #000;
         }
 
         .li {
@@ -37,7 +38,7 @@
             font-size: clamp(1rem, 1.55vw, 1.25rem);
             line-height: 1.5em;
             text-decoration: none;
-            font-weight: 700;
+            font-weight: 200;
             color: var(--bodyTextColor);
             position: relative;
 
@@ -76,7 +77,7 @@
 
 /* Tablet - 600px */
 @media only screen and (min-width: 37.5rem) {
-    #footer-108 {
+    #footer {
         .ul {
             display: flex;
             justify-content: center;
@@ -96,7 +97,7 @@
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
     body.dark-mode {
-        #footer-108 {
+        #footer {
             background-color: rgba(0, 0, 0, 0.2);
             .link {
                 color: #fff;
